MDEV-22637 Rollback of insert fails when prefix index primary key DDL happens

- During primary key prefix index rebuild, rollback of insert fails.
Reason is that InnoDB tries to fetch the column position from
new clustered index and it exceeds default column value tuple fields.
So InnoDB should use the table column position while searching for
defaults column value.